syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/imperiutx/nan_forum/pb";

message User {
    string user_name = 1;
    string email = 2;
    bool is_banned = 3;
    bool is_admin = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}
